--- a/.github/workflows/github-actions-ec2.yml
+++ b/.github/workflows/github-actions-ec2.yml
@@ -9,7 +9,8 @@ on:
 jobs:
   deploy:
     name: Deploy to EC2 on master branch push
-    runs-on: ec2-user-latest
+    runs-on: [self-hosted, Linux, X64]
+
 
 
     steps:
